--- a/docker/frontend/PreVentDataCenter/pom.xml
+++ b/docker/frontend/PreVentDataCenter/pom.xml
@@ -63,10 +63,27 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.14</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.amihaiemil.web</groupId>
+			<artifactId>docker-java-api</artifactId>
+			<version>0.0.11</version>
+		</dependency>
 	 <dependency>
-	  <groupId>commons-codec</groupId>
-	  <artifactId>commons-codec</artifactId>
-	  <version>1.14</version>
+	  <groupId>org.glassfish</groupId>
+	  <artifactId>javax.json</artifactId>
+	  <version>1.1.4</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.glassfish</groupId>
+	  <artifactId>json</artifactId>
+	  <version>1.1.6</version>
+	  <type>pom</type>
 	 </dependency>
 	</dependencies>
 	<build>
