--- a/docker/frontend/PreVentDataCenter/pom.xml
+++ b/docker/frontend/PreVentDataCenter/pom.xml
@@ -72,19 +72,19 @@
 		<dependency>
 			<groupId>com.amihaiemil.web</groupId>
 			<artifactId>docker-java-api</artifactId>
-			<version>0.0.11</version>
+			<version>0.0.12-SNAPSHOT</version>
 		</dependency>
-	 <dependency>
+		<dependency>
 	  <groupId>org.glassfish</groupId>
 	  <artifactId>javax.json</artifactId>
 	  <version>1.1.4</version>
-	 </dependency>
-	 <dependency>
-	  <groupId>org.glassfish</groupId>
-	  <artifactId>json</artifactId>
-	  <version>1.1.6</version>
-	  <type>pom</type>
-	 </dependency>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>json</artifactId>
+			<version>1.1.6</version>
+			<type>pom</type>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
